Update font-display: swap to ensure text remains visible during webfont load

--- a/public/fonts/JetBrainsMono/font.css
+++ b/public/fonts/JetBrainsMono/font.css
@@ -3,6 +3,7 @@
   font-family: "JetBrains Mono";
   font-style: normal;
   font-weight: 400;
+  font-display: swap;
   src: 
     url("woff2/JetBrainsMono-Regular.woff2") format("woff2"),
     url("woff/fonts/JetBrainsMono/JetBrainsMono-Regular.woff") format("woff"),
@@ -13,6 +14,7 @@
   font-family: "JetBrains Mono";
   font-style: italic;
   font-weight: 400;
+  font-display: swap;
   src: 
     url("woff2/JetBrainsMono-Regular.woff2") format("woff2"),
     url("woff/JetBrainsMono-Regular.woff") format("woff"),
@@ -23,6 +25,7 @@
   font-family: "JetBrains Mono";
   font-style: normal;
   font-weight: 500;
+  font-display: swap;
   src: local("JetBrains Mono Medium"),
     url("woff2/JetBrainsMono-Medium.woff2") format("woff2"),
     url("woff/JetBrainsMono-Medium.woff") format("woff"),
@@ -33,6 +36,7 @@
   font-family: "JetBrains Mono";
   font-style: italic;
   font-weight: 500;
+  font-display: swap;
   src: local("JetBrains Mono Medium Italic"),
     url("woff2/JetBrainsMono-Medium-Italic.woff2") format("woff2"),
     url("woff/JetBrainsMono-Medium-Italic.woff") format("woff"),
@@ -43,6 +47,7 @@
   font-family: "JetBrains Mono";
   font-style: normal;
   font-weight: 600;
+  font-display: swap;
   src: local("JetBrains Mono Bold"),
     url("woff2/JetBrainsMono-Bold.woff2") format("woff2"),
     url("woff/JetBrainsMono-Bold.woff") format("woff"),
@@ -53,6 +58,7 @@
   font-family: "JetBrains Mono";
   font-style: italic;
   font-weight: 600;
+  font-display: swap;
   src: local("JetBrains Mono Bold Italic"),
     url("woff2/JetBrainsMono-Bold-Italic.woff2") format("woff2"),
     url("woff/JetBrainsMono-Bold-Italic.woff") format("woff"),
@@ -63,6 +69,7 @@
   font-family: "JetBrains Mono";
   font-style: normal;
   font-weight: 700;
+  font-display: swap;
   src: local("JetBrains Mono ExtraBold"),
     url("woff2/JetBrainsMono-ExtraBold.woff2") format("woff2"),
     url("woff/JetBrainsMono-ExtraBold.woff") format("woff"),
@@ -73,6 +80,7 @@
   font-family: "JetBrains Mono";
   font-style: italic;
   font-weight: 700;
+  font-display: swap;
   src: local("JetBrains Mono ExtraBold Italic"),
     url("woff2/JetBrainsMono-ExtraBold-Italic.woff2") format("woff2"),
     url("woff/JetBrainsMono-ExtraBold-Italic.woff") format("woff"),
